--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: BLRO ~Blog~
 
 # Name of the author
-author: Amit Merchant
+author: Matthew Harazim
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: bearlyMatt's blog about roleplaying oddities.o
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/BL.png
 
 #
 # Flags below are optional
@@ -41,7 +41,7 @@ footer-links:
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
 #google_analytics_ga4: G-GABC1DEFG
