--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: BLRO ~Blog~
+name: bearlyMatt's Blog
 
 # Name of the author
 author: Matthew Harazim
 
 # Short bio or description (displayed in the header)
-description: bearlyMatt's blog about roleplaying oddities.o
+description: The BLRO (bearlyMatt's Library of Roleplaying Oddities) blog. Covering Ludology, development diaries and ephemeral ramblings. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/BL.png
@@ -21,21 +21,22 @@ avatar: /images/BL.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: 
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: bearlyMatt
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter:
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
   mastodon: # <your-mastodon-instance>/@<your-user-name> eg. fosstodon.org/@username
-
+  itch: bearlymatt # itch user name eg. bearlymatt for bearlymatt.itch.io
+  bluesky: bearlymattslib # Assumes enrolled on bsky.social server
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: 
